# crnn-cjk

./: .gitignore  Cargo.toml  ch.txt  lexicon.txt  readme.md  training_config.yaml
src/: dataset.rs  lib.rs  main.rs  model.rs  parse_config.rs  training.rs
src/burn_ext/: backend.rs  ctc.rs  ctc2.rs  gate_controller.rs  lstm.rs  mod.rs
src/converter/: mod.rs
src/img_gen/: corpus.rs  cv_helper.rs  cv_util.rs  font_util.rs  generator.rs  init.rs  merge_util.rs  mod.rs  parse_config.rs
src/img_gen/effect_helper/: math.rs  poisson_editing.rs
src/utils/: mod.rs  string_utils.rs  tensor_ext.rs
synth_text/: config.yaml
