[package]
name = "crnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# burn = { version = "0.10.0", features=["train", "wgpu"]}
burn = { git = "https://github.com/tracel-ai/burn.git", features = [
    "train",
    "wgpu",
    "ndarray",
    "tch",
] }
conv = "0.3.3"
cosmic-text = "0.10.0"
image = "0.24.7"
imageproc = "0.23.0"
indexmap = "2.1.0"
nalgebra = "0.32.3"
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.30"
tch = "0.14.0"
utf8-width = "0.1.7"

[profile.release]
opt-level = 3
#debug = false
#strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = true
